--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <!-- Allow cleartext traffic (HTTP) for localhost (important for local dev) -->
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">10.0.2.2</domain> <!-- For Emulator -->
+        <domain includeSubdomains="true">192.168.100.96</domain>
     </domain-config>
 </network-security-config>
