--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -3,6 +3,7 @@
     <!-- Allow cleartext traffic (HTTP) for localhost (important for local dev) -->
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">10.0.2.2</domain> <!-- For Emulator -->
-        <domain includeSubdomains="true">192.168.100.96</domain>
+        <domain includeSubdomains="true">192.168.100.96</domain> <!-- On Jam -->
+        <domain includeSubdomains="true">192.168.68.132</domain> <!-- On boarding -->
     </domain-config>
 </network-security-config>
