--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -5,5 +5,6 @@
         <domain includeSubdomains="true">10.0.2.2</domain> <!-- For Emulator -->
         <domain includeSubdomains="true">192.168.100.96</domain> <!-- On Jam -->
         <domain includeSubdomains="true">192.168.68.132</domain> <!-- On boarding -->
+        <domain includeSubdomains="true">192.168.100.25</domain>
     </domain-config>
 </network-security-config>
